Fix heading behaviour on small screens

--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,10 @@
   padding-bottom: 1em;
 }
 
+.header__heading {
+  justify-content: space-between;
+}
+
 .header__link {}
 
 .header__link:hover,
